# regelungstechnik

./: .gitignore  LICENSE.txt  README.md  example.py  main.py  pyproject.toml  regelungstechnik.py  roadmap.md  test.py
regelpy/: regelungstechnik.py
regelungstechnik/: digital.py  main.py
