[tool.poetry]
name = "regelungstechnik"
version = "0.1.0"
description = "Create diagrams for control theory in python."
authors = ["David Härer <david@familie-haerer.de>"]
license = "MIT License"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.22.3"
scipy = "^1.8.0"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
